Stop last gap for flush

--- a/src/components/sp/sp.scss
+++ b/src/components/sp/sp.scss
@@ -71,6 +71,6 @@
 
 }
 
-.sp:not(.sp--no-gap,.sp--flush) ::slotted(*:last-child) {
+.sp:not(.sp--no-gap,.sp--flush,.sp--flush-y) ::slotted(*:last-child) {
   padding-bottom: var(--zn-spacing-x-small); // For last element not affected by gap
 }
